<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lblFilename">Filename</string>
    <string name="btnOpenFileText">open</string>
    <string name="btnSendFileText">send</string>
    <string name="lblPeerListHeader">Discovered peers in network:</string>
    <string name="btnSendText">send</string>
    
    <string name="btnStartText">Start P2P Network...</string>
    <string name="txtInstanceNameText">mirko</string>
    
    <string name="app_name">JxtaApp</string>
<string name="txtSeedingServerText">http://192.168.178.71/seeds.txt</string>
<string name="conChat">Start chatting...</string>
<string name="conFile">Start file transfer...</string>
<string name="lblUsername">Username:</string>
<string name="lblSeedingServerURL">Seeding Server URL:</string>
<string name="lblChatHeaderText">Message</string>


    <string name="filemanager_not_installed">No compatible file manager found</string>
    <string name="filemanager_open_title">Select file to open</string>
    <string name="filemanager_open_button">Open</string>
</resources>
